# scythe

./: .gitignore  BUILD.md  CMakeLists.txt  MILESTONES.md  README.md  TODO.md  conan_setup.cmake  conanfile.py  makefile  scythe.cmake  scythe_features.py  sources.mk
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  main.cpp
examples/opengl/: CMakeLists.txt
examples/opengl/compute_filtering/: CMakeLists.txt  drawer.h
examples/opengl/compute_partition/: CMakeLists.txt  drawer.cpp  drawer.h  main.cpp  partition_shaders.h  partitioner.cpp  partitioner.h  shaders.h
examples/opengl/polyline_performance/: CMakeLists.txt  drawer.cpp  drawer.h  main.cpp  shaders.h  types.h
include/: declare_main.h
include/scythe/: application.h  clock.h  defines.h  desktop_application.h  endianness.h  expandable.h  flags.h  graphics_controller.h  graphics_provider.h  keyboard.h  keyboard_controller.h  log.h  logics_controller.h  main.h  mouse.h  mouse_controller.h  non_copyable.h  opengl_include.h  opengl_provider.h  physics_controller.h  platform.h  platform_includes.h  resource.h  resource_manager.h  singleton.h  string_format.h  string_id.h  time_manager.h  timer.h  types.h  window.h  window_controller.h
src/: camera.cpp  camera.h  color.cpp  color.h  crypt.cpp  crypt.h  drawable.cpp  drawable.h  endianness.cpp  endianness.h  ini_file.cpp  ini_file.h  log.cpp  makefile  material.h  node.cc  node.cpp  node.h  resource.h  resource_manager.cpp  resource_manager.h  sources.mk  string_id.cpp  string_id.h
src/application/: application.cpp  application.h  desktop_application.cpp  desktop_application.h  opengl_application.cpp  opengl_application.h
src/common/: counting_pointer.h  enum_table.h  log.cpp  log.h  non_copyable.h  notification.cpp  notification.h  platform.h  ref.cpp  ref.h  sc_assert.h  sc_delete.h  singleton.h  string_format.h  types.h
src/containers/: array.h  forward_list.h  list.h  lru_cache.h  map.h  set.h  stack.h
src/event/: event.cpp  event.h  event_listener.h
src/filesystem/: directory.cpp  directory.h  file_operations.cpp  file_operations.h  filename.cpp  filename.h
src/graphics/: context.cpp  context.h  cubemap_face_filler.cpp  cubemap_face_filler.h  cubemap_fill_type.h  font.cpp  font.h  graphics_provider.cpp  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_info.cpp  shader_info.h  text.cpp  text.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h  vertex_format.cpp  vertex_format.h  video_memory_buffer.cpp  video_memory_buffer.h
src/image/: image.cpp  image.h  image_bmp.cpp  image_hdr.cpp  image_jpeg.cpp  image_png.cpp  image_rescale.cpp  image_tga.cpp  image_tif.cpp
src/input/: desktop_input_listener.h  input_listener.h  keyboard.cpp  keys.cpp  keys.h  mouse.cpp  mouse.h
src/math/: bounding_box.cpp  bounding_box.h  bounding_box.inl  bounding_sphere.cpp  bounding_sphere.h  common.cpp  common_math.cpp  common_math.h  constants.cpp  constants.h  frustum.cpp  frustum.h  line.h  matrix.cpp  matrix.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrix4.inl  plane.cpp  plane.h  plane.inl  quaternion.cpp  quaternion.h  quaternion.inl  ray.cpp  ray.h  ray.inl  segment.cpp  segment.h  transform.cpp  transform.h  vector.cpp  vector.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  (+3 more)
src/memory/: allocator.h  default_allocator.h  pool_allocator.cpp  pool_allocator.h  stack_linked_list.h  stl_pool_allocator.h  test_allocator.h
src/model/: box_model.cpp  box_model.h  complex_mesh.cpp  complex_mesh.h  complex_mesh_obj.cpp  complex_mesh_scm.cpp  cube_frame.cpp  cube_frame.h  cube_model.cpp  cube_model.h  generated_model.cpp  generated_model.h  mesh.cpp  mesh.h  mesh_box.cpp  mesh_cube.cpp  mesh_obj.cpp  mesh_part.cpp  mesh_part.h  mesh_parts_enumerator.cpp  mesh_parts_enumerator.h  mesh_physical_box.cpp  mesh_quad_fullscreen.cpp  mesh_scm.cpp  mesh_sphere.cpp  mesh_tetrahedron.cpp  mesh_vertices_enumerator.cpp  mesh_vertices_enumerator.h  model.cpp  model.h  physical_box_model.cpp  physical_box_model.h  screen_quad_model.cpp  screen_quad_model.h  sphere_model.cpp  sphere_model.h  tetrahedron_model.cpp  tetrahedron_model.h  vertex.h
src/physics/: Requirements.txt  bullet_include.h  physics_collision_object.cpp  physics_collision_object.h  physics_collision_shape.cpp  physics_collision_shape.h  physics_constraint.cpp  physics_constraint.h  physics_constraint.inl  physics_controller.cpp  physics_controller.h  physics_fixed_constraint.cpp  physics_fixed_constraint.h  physics_fixed_constraint.inl  physics_generic_constraint.cpp  physics_generic_constraint.h  physics_generic_constraint.inl  physics_ghost_object.cpp  physics_ghost_object.h  physics_hinge_constraint.cpp  physics_hinge_constraint.h  physics_rigid_body.cpp  physics_rigid_body.h  physics_rigid_body.inl  physics_socket_constraint.cpp  physics_socket_constraint.h  physics_spring_constraint.cpp  physics_spring_constraint.h  physics_vehicle.cpp  (+4 more)
test/: makefile  sources.mk
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  main.cpp  makefile  sources.mk  test.py
tests/containers/: array_test.cpp  forward_list_test.cpp  list_test.cpp  map_test.cpp  set_test.cpp  stack_test.cpp
tests/memory/: pool_allocator_test.cpp
(+120 files in other folders)
